BACS-18: feat: authentication implemented
