# Source/Application/BaCS.Application.Contracts/Dto/UserDto.cs
@@ -5,12 +5,12 @@ using System.ComponentModel;
 public record UserDto(
     [property: Description("ID пользователя.")]
     Guid Id,
-    [property: Description("Уникальный логин пользователя.")]
-    string Username,
     [property: Description("Email-адрес пользователя.")]
     string Email,
     [property: Description("ФИО пользователя.")]
     string Name,
+    [property: Description("Ссылка на фотографию пользователя.")]
+    string ImageUrl,
     [property: Description("Уведомлять о бронированиях по электронной почте.")]
     bool EnableEmailNotifications
 );
