# Source/Application/BaCS.Application.Contracts/Requests/UpdateUserRequest.cs
@@ -4,17 +4,11 @@ using System.ComponentModel;
 using FluentValidation;
 
 public record UpdateUserRequest(
-    [property: Description("ФИО пользователя.")]
-    string Name,
-    [property: Description("Email-адрес пользователя.")]
-    string Email
+    [property: Description("Уведомлять о бронированиях по электронной почте.")]
+    bool EnableEmailNotifications
 );
 
 public class UpdateUserRequestValidator : AbstractValidator<UpdateUserRequest>
 {
-    public UpdateUserRequestValidator()
-    {
-        RuleFor(x => x.Name).NotEmpty();
-        RuleFor(x => x.Email).NotEmpty().EmailAddress();
-    }
+    public UpdateUserRequestValidator() => RuleFor(x => x.EnableEmailNotifications).NotNull();
 }
