# Source/Domain/BaCS.Domain.Core/Entities/User.cs
@@ -6,8 +6,8 @@ public class User : AuditableEntity
 {
     public Guid Id { get; init; } = Guid.CreateVersion7();
 
-    public string Username { get; set; }
     public string Email { get; set; }
     public string Name { get; set; }
+    public string ImageUrl { get; set; }
     public bool EnableEmailNotifications { get; set; } = true;
 }
